add FxTest gradle run and fix naming issue